--- a/templates/backoffice/orders/list.html
+++ b/templates/backoffice/orders/list.html
@@ -95,7 +95,7 @@
                            {{ forloop.counter }}
                            {% endif %}
                         </td>
-                        <td>{{ order.created_at|date:"d/m/Y h:i A" }}</td>
+                        <td>{{ order.created_at|date:"d M Y, h:i A" }}</td>
                         <td>{{ order.client_name }}</td>
                         <td>{{ order.created_by.get_full_name|default:order.created_by.username }}</td>
                         <td>S/ {{ order.total_amount }}</td>
