--- a/templates/base/storefront/navbar.html
+++ b/templates/base/storefront/navbar.html
@@ -3,7 +3,7 @@
         <!-- Logo -->
         <a href="#" class="nav-brand">
             <h1>4 PELOS</h1>
-            <span>CLUB BARBERS</span>
+            <span>CLUB BARBER'S</span>
         </a>
         <!-- Desktop Menu -->
         <div class="nav-links">
