--- a/templates/base/storefront/base.html
+++ b/templates/base/storefront/base.html
@@ -5,9 +5,9 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>4 Pelos Club Barbers | Olmos, Lambayeque, Perú | Barbería, Estilo Premium</title>
+      <title>4 Pelos Club Barber's | Olmos, Lambayeque, Perú | Barbería, Estilo Premium</title>
       <meta name="description"
-            content="4 Pelos Club Barbers en Olmos, Lambayeque, Perú. Expertos en barbería, cortes de cabello, ondulación y estilo para hombres.">
+            content="4 Pelos Club Barber's en Olmos, Lambayeque, Perú. Expertos en barbería, cortes de cabello, ondulación y estilo para hombres.">
       <meta name="keywords"
             content="barbería, Olmos, Lambayeque, Perú, 4 Pelos Club, cortes de cabello, ondulación, estilo, peluquería masculina">
       <link rel="shortcut icon" href="{% static 'storefront/img/favicon.ico' %}" type="image/x-icon">
