feat(profile): agregar vista y formulario para actualizar el perfil de usuario

--- a/templates/base/backoffice/header.html
+++ b/templates/base/backoffice/header.html
@@ -36,7 +36,7 @@
                             <h6 class="dropdown-header">Hola {{ user.username }}</h6>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#"><i class="icon-mid bi bi-person me-2"></i> Mi Perfil</a>
+                            <a class="dropdown-item" href="{% url 'backoffice:user_profile' %}"><i class="icon-mid bi bi-person me-2"></i> Mi Perfil</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="#"><i class="icon-mid bi bi-gear me-2"></i> Configuración</a>
